# distributed-fs

./: .gitignore  CMakeLists.txt  Dockerfile.all  Dockerfile.client  Dockerfile.replica  Dockerfile.server  README.MD  README.md  compare_md5.py  dfs.proto  dfs_pb2.py  docker-compose-2-write-read.yml  docker-compose-read-dead-primary.yml  docker-compose-read-from-disk.yaml  docker-compose-write-dead-primary.yml  docker-compose-write-read.yml  docker-compose-write.yml  docker-compose.yml  docker-restart-detached.sh  docker-restart.sh  file_request.proto  file_with_name_msg.proto  file_with_name_msg_pb2.py  gen.py  large_file_generator.py  make-dirs.sh  remove-chunks.sh  replicas_response.proto  setup.bash
archive/: main_server.py
archive/replica/: replica.c
c-client/: Makefile  client  client.c  common.c  common.h  dfs.pb-c.c  dfs.pb-c.h  dfs_pb2.py  mock_master.py  output.txt
client/: CMakeLists.txt  Dockerfile  client.c  client.h  client.py  client_r.py  file_request_pb2.py  file_with_name_msg_pb2.py  replicas_response_pb2.py  test_file.txt  tp.c
data_client/: alfabet.txt  komar.txt
docs/: server.md
mock-replica/: Makefile  ala2.chunk  common.h  dfs.pb-c.c  dfs.pb-c.h  mock_replica  mock_replica.c
mock-replica/chunks/: ala2.chunk  testala1.chunk  testala2.chunk
piaskownica/: Makefile  common.c  common.h  file.txt  pclient  pclient.c  pread  pread.c  pserver  pserver.c
replica/: CMakeLists.txt  Dockerfile  replica  replica-old.c  replica-vlada.c  replica.c
replica1/: replica  replica.c
server/: Makefile  dfs.pb-c.c  dfs.pb-c.h  file_request_pb2.py  file_with_name_msg_pb2.py  gepetto.c  main_server.py  replicas_response_pb2.py  server  server.c  server.h  server.py
service/: file_merger.py  file_splitter.py
shared/: CMakeLists.txt  common.c  common.h  dfs.pb-c.c  dfs.pb-c.h
tests/: dfs.pb.cc  dfs.pb.h  test1.sh  test_distributed_fs_1_read_from_disk.py  test_distributed_fs_2_connect_to_master.py  test_distributed_fs_3_receive_from_master.py  test_distributed_fs_4_write_to_pr_replica.py  test_distributed_fs_5_replicate_to_secondary_replica.py  test_distributed_fs_8_double_write_read.py  test_distributed_fs_9_0_write.py  test_distributed_fs_9_1_write_read.py  test_distributed_fs_9_2_write_dead_primary.py  test_distributed_fs_9_3_read_dead_primary.py  test_distributed_fs_read.py
